--- a/front/fisibet/src/app/home/index.scss
+++ b/front/fisibet/src/app/home/index.scss
@@ -6,7 +6,7 @@
   gap: 10px;
   .event--bets--list {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     gap: 10px;
     background-color: $fifth-color;
   }
