--- a/front/fisibet/src/components/Header/index.scss
+++ b/front/fisibet/src/components/Header/index.scss
@@ -58,3 +58,13 @@
     }
   }
 }
+
+@media (max-width: $tablet) {
+  .header--container {
+    .header--left--container {
+      .header--nav--links {
+        display: none;
+      }
+    }
+  }
+}
